[sidebar] Resolve changes in module before switching

Summary:
After some refactoring we close the module before checking if there are
unsaved changes. We then try to resolve changes on the new KCM that
we've just opened, which never has changes.

BUG: 416834
Fixed-in: 5.18.1

Test Plan:
Opened colours in systemsettings
changed it
switched to another kcm

Did the same from within a search

opened kinfocenter
no prompts

Reviewers: #plasma, bport, ngraham

Reviewed By: bport, ngraham

Subscribers: ngraham, bport, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D27381